--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,18 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "ES2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "strict": true,
-    "jsx": "react-jsx",
-    "noEmit": true
-    {
-      "baseUrl": ".",
-      "paths": {
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
       "@/*": ["./*"]
-    },
-    "noEmit": true
-  }
-
+    }
   },
-  "include": ["src"]
+  "include": ["**/*.ts"]
 }
