--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "ts-node api/main.ts"
+    "start": "ts-node ./main.ts"
   },
   "dependencies": {
     "discord.js": "^14.25.1",
