--- a/api/package.json
+++ b/api/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "discord.js": "^14.25.1",
-    "winston": "^3.19.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "google-auth-library": "^10.5.0",
+    "google-spreadsheet": "^5.0.2",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
