--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,9 @@
     "start": "ts-node ./main.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.5.0",
     "discord.js": "^14.25.1",
     "dotenv": "^16.4.5",
     "google-auth-library": "^10.5.0",
@@ -13,6 +16,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.0"
   }
