--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.5.0",
+    "cookie-parser": "^1.4.7",
     "discord.js": "^14.25.1",
     "dotenv": "^16.4.5",
     "google-auth-library": "^10.5.0",
@@ -17,6 +18,8 @@
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
