--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
