--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,7 @@
-DISCORD_APPLICATION_ID=
-DISCORD_TOKEN=
-DISCORD_GUILD_ID=
+DISCORD_APPLICATION_ID=1450509399369056428
+DISCORD_TOKEN=MTQ1MDUwOTM5OTM2OTA1NjQyOA.G4ssza.D6Fc3kYkQLk-M10TiBZD8Ph_nK8TuPZmGPQgfk
+DISCORD_GUILD_ID=1450524984975036449
 
-GOOGLE_AUTH_EMAIL=
-GOOGLE_AUTH_KEY=
-GOOGLE_SHEETS_DOC_ID=
+GOOGLE_AUTH_EMAIL=1
+GOOGLE_AUTH_KEY=1
+GOOGLE_SHEETS_DOC_ID=1
