--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -13,3 +13,21 @@
   },
   "include": ["**/*.ts"]
 }
+/**
+{
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true
+  },
+  "include": ["src //*"]
+}
+  
+*/
