--- a/discord/package.json
+++ b/discord/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@furby/api",
+  "name": "@furby/discord",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1",
+    "discord.js": "^14.25.1",
     "@furby/common": "*"
   }
 }
