--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
   "author": "",
   "type": "module",
   "main": "index.js",
+  "workspaces": [
+    "api",
+    "discord",
+    "frontend",
+    "common"
+  ],
   "dependencies": {
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
@@ -13,7 +19,11 @@
     "node-cron": "^4.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@types/express": "^5.0.6",
+    "babel-plugin-module-resolver": "^5.0.2",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
