--- a/common/package.json
+++ b/common/package.json
@@ -2,22 +2,25 @@
   "name": "@furby/common",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
-    "better-sqlite3": "^12.5.0",
     "cookie-parser": "^1.4.7",
     "discord.js": "^14.25.1",
     "dotenv": "^16.4.5",
     "google-auth-library": "^10.5.0",
     "google-spreadsheet": "^5.0.2",
+    "pg": "^8.13.1",
     "winston": "^3.19.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
+    "@types/pg": "^8.11.10",
     "jest": "^30.2.0",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
