test: add api test

--- a/api/package.json
+++ b/api/package.json
@@ -4,13 +4,22 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node ./index.ts"
+    "start": "ts-node ./index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1",
-    "@furby/common": "*"
+    "@furby/common": "*",
+    "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
+    "tsconfig-paths": "^3.15.0"
   }
 }
