--- a/discord/package.json
+++ b/discord/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node ./index.ts"
+    "start": "ts-node ./index.ts",
+    "build": "node build.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.25.1",
-    "@furby/common": "*"
+    "@furby/common": "*",
+    "discord.js": "^14.25.1"
+  },
+  "devDependencies": {
+    "esbuild": "^0.27.2"
   }
 }
