--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "main": "index.js",
   "scripts": {
     "start:api": "DOTENV_CONFIG_PATH=../.env npm run start -w api",
-    "start:bot": "DOTENV_CONFIG_PATH=../.env npm run start -w discord"
+    "build:api": "npm run build -w api",
+    "start:bot": "DOTENV_CONFIG_PATH=../.env npm run start -w discord",
+    "build:bot": "npm run build -w discord"
   },
   "workspaces": [
     "api",
