--- a/discord/package.json
+++ b/discord/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@furby/common": "*",
-    "discord.js": "^14.25.1"
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
     "esbuild": "^0.27.2"
