refac: split in layers

--- a/infra/clusters/prod/flux-system/flux-ks.yaml
+++ b/infra/clusters/prod/flux-system/flux-ks.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 5m0s
   retryInterval: 1m0s
-  path: "./infra/k8s"
+  path: "./infra/overlays/prod"
   prune: true
   wait: true
   sourceRef:
