fix: small fixes

--- a/infra/base/api/secrets.yaml
+++ b/infra/base/api/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: bot-secret
+    name: api-secret
 type: Opaque
 stringData:
     DISCORD_TOKEN: ENC[AES256_GCM,data:1EQzQYvnXM86GstcGEay+qarOItsNWjdsjVfvm4rByKNWCRr67mzMtMrfQRyNmia7jpTYHealVl7/htpT6601uk9C+6KKQ1Y,iv:H6J6WX9CVDBphBxxGcZx25s7Sk0YHbIo+X2/22PUW5E=,tag:KdmYm9xxi8VK6xNdiJsgSw==,type:str]
