--- a/infra/overlays/prod/kustomization.yaml
+++ b/infra/overlays/prod/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: default
+
 # On inclut les bases qu'on veut déployer
 resources:
   - ../../base/postgres
