--- a/infra/clusters/prod/flux-system/dev-sync.yaml
+++ b/infra/clusters/prod/flux-system/dev-sync.yaml
@@ -28,3 +28,7 @@ spec:
     kind: GitRepository
     name: furby-repo-ops
   targetNamespace: dev
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
