feat: add docker image deployemnt clause

--- a/infra/base/discord/deployment.yaml
+++ b/infra/base/discord/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: furby-bot
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: bot
           image: ghcr.io/olyxz16/furby/bot:latest
