--- a/infra/base/api/deployment.yaml
+++ b/infra/base/api/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: furby-api
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: api
           image: ghcr.io/olyxz16/furby/api:latest
