--- a/infra/base/api/ingress.yaml
+++ b/infra/base/api/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: furby.olyxz16.fr
+    - host: furby-api.olyxz16.fr
       http:
         paths:
           - path: /
@@ -20,5 +20,5 @@ spec:
 
   tls:
     - hosts:
-        - furby.olyxz16.fr
+        - furby-api.olyxz16.fr
       secretName: api-tls-cert
