--- a/infra/base/cert-manager/issuer-prod.yaml
+++ b/infra/base/cert-manager/issuer-prod.yaml
@@ -17,4 +17,4 @@ spec:
               key: api-token
         selector:
           dnsZones:
-            - "furby.olyxz16.fr"
+            - "furby-api.olyxz16.fr"
