--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:api": "npm run build -w api",
     "deploy:frontend": "npm run pages:deploy -w frontend",
     "start:bot": "DOTENV_CONFIG_PATH=../.env npm run start -w discord",
-    "build:bot": "npm run build -w discord"
+    "build:bot": "npm run build -w discord",
+    "test:integration": "jest -c tests/integration/jest.config.cjs"
   },
   "workspaces": [
     "api",
@@ -30,8 +31,12 @@
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.9",
+    "axios": "^1.13.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "nodemon": "^3.1.11",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
