--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "common"
   ],
   "dependencies": {
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
