--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "playwright": "^1.57.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
