--- a/api/package.json
+++ b/api/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@furby/common": "*",
-    "express": "^5.2.1",
-    "dotenv": "^17.2.3"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
